--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "devSkyy-avatar-dashboard",
   "version": "1.0.0",
   "description": "First-of-its-kind AI Avatar Dashboard for Luxury Fashion",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^5.18.0",
@@ -18,15 +19,19 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.0",
     "prettier": "^3.2.0",
     "tailwindcss": "^3.4.0",
+    "terser": "^5.27.0",
     "typescript": "^5.3.0",
-    "vite": "^7.1.9"
+    "vite": "^6.0.7"
   },
   "scripts": {
     "dev": "vite",
