🚀 ENTERPRISE MULTI-PLATFORM DEPLOYMENT: Complete Integration & Security Hardening
✅ COMPREHENSIVE DEPLOYMENT STRATEGY IMPLEMENTED:

🔧 MAIN.PY AGENT ECOSYSTEM ALIGNMENT:
• Integrated BaseAgent framework with V2 agent system
• Added comprehensive agent orchestrator and registry initialization
• Enhanced with EnhancedAgentManager and ML cache integration
• Implemented graceful agent ecosystem startup and shutdown
• Added enterprise agent management API endpoints
• Enhanced with multi-agent coordination and health monitoring

🐳 DOCKER HUB INTEGRATION:
• Created multi-platform deployment workflow (Vercel + Docker + WordPress)
• Implemented secure Docker Hub credential management
• Added multi-architecture builds (AMD64, ARM64) with BuildX
• Enhanced with Docker image security scanning using Trivy
• Created comprehensive DOCKER_README.md for Docker Hub
• Implemented automated Docker Hub description updates

🌐 VERCEL DEPLOYMENT ENHANCEMENT:
• Updated vercel.json with enterprise security headers
• Added X-Content-Type-Options, X-Frame-Options, X-XSS-Protection
• Implemented Strict-Transport-Security and Referrer-Policy
• Enhanced with health endpoint caching controls
• Added documentation redirects and platform identification

🔐 COMPREHENSIVE SECURITY FRAMEWORK:
• Created DEPLOYMENT_SECURITY_GUIDE.md with credential rotation procedures
• Implemented secure credential management strategy (credentials redacted)
• Added GitHub Actions secrets management strategy
• Enhanced with SSH key management for WordPress hosting
• Created security monitoring and incident response procedures

📦 WORDPRESS HOSTING INTEGRATION:
• Implemented SFTP/SSH deployment pipeline
• Added WordPress-compatible directory structure creation
• Enhanced with backup and rollback capabilities
• Implemented API endpoint integration through WordPress
• Added deployment verification and health checks

🛡️ SECURITY HARDENING MEASURES:
• Implemented least-privilege access control principles
• Added comprehensive au

--- a/vercel.json
+++ b/vercel.json
@@ -44,5 +44,52 @@
   "github": {
     "autoDeployment": true,
     "autoJobCancelation": true
-  }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "X-Deployment-Platform",
+          "value": "vercel"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        }
+      ]
+    },
+    {
+      "source": "/health",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/docs",
+      "destination": "https://github.com/SkyyRoseLLC/DevSkyy/blob/main/README.md",
+      "permanent": false
+    }
+  ]
 }
