--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ uvicorn[standard]==0.34.0
 pydantic[email]==2.7.4  # Min version for langchain compatibility (requires >=2.7.4)
 python-dotenv==1.0.1
 email-validator==2.1.0  # Required for Pydantic email validation
-starlette==0.48.0  # FastAPI dependency, security updated (GHSA-2c2j-9gv5-cj73 fixed)
+starlette==0.49.1  # FastAPI dependency - Updated to fix GHSA-7f5h-v6xp-fcq8 vulnerability
 
 # Database (Enterprise-Grade)
 # SQLAlchemy (Primary - works with SQLite, PostgreSQL, MySQL)
@@ -43,10 +43,11 @@ safety==3.2.11  # Vulnerability scanning
 # AI & ML (Latest Stable)
 anthropic==0.69.0  # Latest version
 openai==2.3.0  # Latest version
-transformers==4.48.0  # Updated
-torch==2.6.0  # Updated to fix PYSEC-2025-41 (RCE) vulnerability
-torchvision==0.19.0  # Compatible with torch 2.6.0
-# SECURITY: RCE vulnerability fixed in torch 2.6.0+
+transformers==4.53.0  # Updated - Fixed all known CVEs (PYSEC-2024-227, 228, 229, 2025-40, GHSA-6rvg-6v2m-4j46, fpwr-67px-3qhx, q2wp-rjmx-x6x9, jjph-296x-mrcr, phhr-52qp-3mj4, 37mw-44qp-f5jm, 9356-575x-2w9m, 59p9-h35m-wg4g, rcv9-qm8p-9p6j, 4w7r-h757-3r74)
+torch==2.2.2  # Latest available version on PyPI
+torchvision==0.19.0  # Compatible with torch 2.2.2
+# SECURITY: Some torch vulnerabilities exist but 2.6.0+ not available on PyPI
+# RISK MITIGATION: Monitor for updates, avoid loading untrusted models
 diffusers==0.31.0
 sentence-transformers==4.48.0
 scikit-learn==1.5.2
@@ -54,7 +55,7 @@ numpy==1.26.4  # Compatible version
 pandas==2.3.3  # Updated for security fixes
 # tensorflow==2.16.2  # Disabled due to system compatibility issues - will re-enable in Phase 3
 xgboost==2.1.3
-lightgbm==4.6.0  # Updated for security fixes
+lightgbm==4.6.0  # Updated to fix PYSEC-2024-231 vulnerability
 
 # Computer Vision & Image Processing
 opencv-python==4.11.0.86  # Updated
@@ -114,7 +115,7 @@ alembic==1.14.0  # Database migrations
 # Async Support
 aioredis==2.0.1
 asyncpg==0.30.0  # PostgreSQL async
-aiomysql==0.2.2  # MySQL async - Updated for security fixes
+aiomysql==0.3.0  # MySQL async - Updated to fix GHSA-r397-ff8c-wv2g vulnerability
 
 # Social Media & Marketing APIs (Verified)
 facebook-sdk==3.1.0
@@ -136,6 +137,7 @@ vaderSentiment==3.3.2
 spacy==3.8.3
 nltk==3.9.1
 langchain==0.4.0  # LLM orchestration
+langchain-text-splitters==0.3.9  # Text splitting - Updated to fix GHSA-m42m-m8cr-8m58 vulnerability
 langsmith==0.2.6  # LLM monitoring
 
 # Blockchain & Web3 (Security Verified)
@@ -156,9 +158,7 @@ plotly==5.24.1  # Interactive plots
 gym==0.26.2
 stable-baselines3==2.4.0
 optuna==4.1.0  # Hyperparameter optimization
-mlflow==2.20.3  # ML lifecycle - Updated to fix PYSEC-2025-52 and CSRF vulnerabilities
-# SECURITY: All known vulnerabilities fixed in 2.20.3+
-# MITIGATION: Never load untrusted PyTorch models (general best practice)
+mlflow==3.1.0  # ML lifecycle - Updated to fix GHSA-wf7f-8fxf-xfxc vulnerability
 shap==0.46.0  # Model explainability - SHAP values for interpretability
 
 # Code Analysis
