--- a/backups/pre-security-fix-20251215-170208/package.json
+++ b/backups/pre-security-fix-20251215-170208/package.json
@@ -18,6 +18,7 @@
     "@types/vue": "^1.0.31",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitejs/plugin-vue": "^6.0.3",
+    "@vue/cli": "^5.0.9",
     "ajv": "^8.17.1",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
