--- a/mcp/requirements.txt
+++ b/mcp/requirements.txt
@@ -73,15 +73,15 @@ transformers==4.47.1  # For local tokenization
 sentence-transformers==3.3.1  # For embeddings
 langchain==0.3.9  # For LLM orchestration
 langchain-openai==0.2.11
-langchain-anthropic==0.2.7
+langchain-anthropic==1.3.0
 
 # Vector database (optional)
 chromadb==0.5.23
-faiss-cpu==1.9.0.post1
+faiss-cpu==1.13.1
 
 # Web scraping (for context retrieval)
 beautifulsoup4==4.12.3
-requests==2.32.3
+requests==2.32.5
 
 # File processing
 pypdf==5.1.0
