security: Fix Dependabot vulnerability alerts
Updated dependency versions to address security vulnerabilities:

Critical (2):
- bentoml>=1.4.8 (CVE-2025-27520, CVE-2025-32375 - RCE via insecure deserialization)

High (11):
- mcp>=1.23.0 (CVE-2025-53365, CVE-2025-53366, CVE-2025-66416 - DoS and DNS rebinding)
- starlette>=0.49.1 (CVE-2025-62727 - DoS via Range header)
- transformers>=4.53.0 (CVE-2024-11392, CVE-2024-11393, CVE-2024-11394 - RCE)

Moderate (24):
- pypdf>=6.4.0 (CVE-2025-66019, CVE-2025-62707, CVE-2025-55197 - DoS)
- transformers>=4.53.0 (Multiple ReDoS vulnerabilities)
- aiohttp>=3.12.14 (CVE-2025-53643 - HTTP request smuggling)

Low (4):
- transformers>=4.53.0 (Input validation issues)

Files updated:
- docker/requirements.txt
- mcp/requirements.txt
- ml/requirements.txt
- pyproject.toml
- requirements.txt

--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -2,9 +2,9 @@
 # Isolated requirements for containerized deployment
 
 # Core FastAPI stack
-fastapi==0.119.0
-uvicorn[standard]==0.32.1
-starlette==0.48.0
+fastapi>=0.119.0
+uvicorn[standard]>=0.32.1
+starlette>=0.49.1  # Fixed: CVE-2025-62727 (DoS via Range header)
 
 # Database
 sqlalchemy==2.0.36
