--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -5,33 +5,33 @@
 torch==2.9.1
 torchvision==0.20.1
 torchaudio==2.9.1
-transformers==4.47.1
-huggingface-hub==0.27.0
+transformers>=4.53.0  # Fixed: CVE-2024-11392, CVE-2024-11393, CVE-2024-11394, CVE-2025-3933, CVE-2025-5197, CVE-2025-6051, CVE-2025-6638, CVE-2025-6921
+huggingface-hub>=0.27.0
 
 # Scientific computing
-numpy==2.1.3
-pandas==2.2.3
-scipy==1.14.1
-scikit-learn==1.6.0
+numpy>=2.1.3
+pandas>=2.2.3
+scipy>=1.14.1
+scikit-learn>=1.6.0
 
 # Deep learning utilities
-accelerate==1.2.1
-datasets==3.1.0
-tokenizers==0.21.0
+accelerate>=1.2.1
+datasets>=3.1.0
+tokenizers>=0.21.0
 
 # Computer vision
-opencv-python==4.10.0.84
-pillow==11.0.0
-imageio==2.36.1
+opencv-python>=4.10.0.84
+pillow>=11.0.0
+imageio>=2.36.1
 
 # Natural language processing
-nltk==3.9.1
-spacy==3.8.2
-textblob==0.18.0.post0
+nltk>=3.9.1
+spacy>=3.8.2
+textblob>=0.18.0.post0
 
 # Model serving
-mlflow==3.5.0rc0
-bentoml==1.3.16
+mlflow>=3.5.0
+bentoml>=1.4.8  # Fixed: CVE-2025-27520, CVE-2025-32375 (Critical RCE vulnerabilities)
 
 # Experiment tracking
 wandb==0.18.7
@@ -86,9 +86,9 @@ joblib==1.4.2
 dill==0.3.9
 
 # FastAPI integration
-fastapi==0.119.0
-uvicorn==0.32.1
-pydantic==2.10.3
+fastapi>=0.119.0
+uvicorn>=0.32.1
+pydantic>=2.10.3
 
 # Database for ML
 sqlalchemy==2.0.36
