--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -22,8 +22,8 @@ passlib[bcrypt]==1.7.4
 argon2-cffi==23.1.0
 
 # HTTP client
-httpx==0.28.1
-aiohttp==3.11.10
+httpx>=0.28.1
+aiohttp>=3.12.14  # Fixed: CVE-2025-53643 (HTTP request smuggling)
 
 # Validation
 pydantic==2.10.3
