chore: cleanup WordPress backend + security fixes
Security Fixes:
- Upgrade python-multipart 0.0.6→0.0.22 (CVE fix: Arbitrary File Write)
- Upgrade pypdf 6.4.0→6.6.2 (CVE fix: Infinite Loop)
- Upgrade bentoml 1.4.8→1.4.34 (CVE fix: Path Traversal)
- Add lodash/lodash-es overrides ^4.17.23 (Prototype Pollution fix)

WordPress Backend Cleanup:
- Remove WordPress REST API endpoints (api/v1/wordpress.py, api/v1/woocommerce_webhooks.py)
- Remove WooCommerce MCP server (mcp_servers/woocommerce_mcp.py)
- Remove WordPress sync modules (sync/woocommerce_sync.py, sync/wordpress_media_approval_sync.py)
- Remove WordPress memory files (.serena/memories/*wordpress*.md)
- Clean up integrations/__init__.py (remove WordPress imports)

WordPress Frontend (Kept):
- Add wp-content/plugins/skyyrose-virtual-experience/templates/template-experiences-landing.php
- This is the landing page template for the live WordPress.com site at https://skyyrose.co

Note: Starting fresh with WordPress integration. Backend deleted, frontend plugin kept.

--- a/package.json
+++ b/package.json
@@ -129,7 +129,9 @@
     "overrides": {
       "hono": ">=4.11.4",
       "prismjs": ">=1.30.0",
-      "diff": ">=8.0.3"
+      "diff": ">=8.0.3",
+      "lodash": "^4.17.23",
+      "lodash-es": "^4.17.23"
     }
   }
 }
