--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "meshoptimizer": "^1.0.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
-    "next": "^16",
+    "next": ">=16.1.5",
     "next.js": "^1.0.3",
     "node-fetch": "^3.3.2",
     "nuxt": "^4.2.2",
@@ -127,7 +127,7 @@
   },
   "pnpm": {
     "overrides": {
-      "hono": ">=4.11.4",
+      "hono": ">=4.11.7",
       "prismjs": ">=1.30.0",
       "diff": ">=8.0.3",
       "lodash": "^4.17.23",
