fix(security): patch vulnerabilities in root + skyyrose packages
Root (pnpm):
- Add onlyBuiltDependencies allowlist (esbuild, sharp, prisma, canvas, etc.)
  to resolve pnpm v10 blocked build scripts warning
- Overrides already present for tar, fast-xml-parser, ajv, qs, langsmith, axios

skyyrose (npm):
- Replace serve@14 with http-server@14 (serve pulled in minimatch<10 via serve-handler)
- Add npm overrides: minimatch>=10.0.0, glob>=10.4.0, rimraf>=5.0.10, ajv>=8.18.0
- Result: 6 high → 0 vulnerabilities

avatar-assistant.js:
- Add ROOM_DEFAULT_SKU map for per-room default SKU on avatar
- Add POSE_BASE / SKYY_BASE constants for Skyy pose image paths
- Add _imgEl, _toggleImgEl, _currentSku instance fields

--- a/package.json
+++ b/package.json
@@ -173,6 +173,20 @@
     "wp-pot-cli": "^1.5.0"
   },
   "pnpm": {
+    "onlyBuiltDependencies": [
+      "@apollo/protobufjs",
+      "@parcel/watcher",
+      "@prisma/engines",
+      "@sentry/cli",
+      "canvas",
+      "core-js",
+      "core-js-pure",
+      "esbuild",
+      "fs-ext",
+      "prisma",
+      "sharp",
+      "unrs-resolver"
+    ],
     "overrides": {
       "hono": ">=4.11.7",
       "prismjs": ">=1.30.0",
