--- a/skyyrose/package.json
+++ b/skyyrose/package.json
@@ -13,7 +13,7 @@
     "generate:ai-marketing": "node build/nanobanana-brand-system.js marketing",
     "generate:ai-all": "node build/nanobanana-brand-system.js",
     "build": "npm run build:scenes && npm run build:images && npm run build:logos",
-    "dev": "npx serve .",
+    "dev": "npx http-server . -p 3000 -c-1 --cors",
     "generate:alts": "node build/generate-alt-text.js",
     "verify": "node build/verify.js"
   },
@@ -58,7 +58,10 @@
   },
   "overrides": {
     "esbuild": ">=0.25.0",
-    "ajv": ">=8.18.0"
+    "ajv": ">=8.18.0",
+    "minimatch": ">=10.0.0",
+    "glob": ">=10.4.0",
+    "rimraf": ">=5.0.10"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
@@ -69,7 +72,7 @@
     "astro": "^5.17.2",
     "drizzle-kit": "^0.31.9",
     "next": "^16.1.6",
-    "serve": "^14.2.0",
+    "http-server": "^14.1.1",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
