--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,10 @@ dependencies = [
     "aiohttp>=3.9",
     "requests>=2.31",
 
+    # GraphQL
+    "strawberry-graphql[fastapi]>=0.217.0",  # GraphQL library for FastAPI
+    "aiodataloader>=0.2.0",  # DataLoader pattern for N+1 query prevention
+
     # AI/ML & MCP Server
     "openai>=1.6",
     "mcp>=1.23.0",  # Fixed: CVE-2025-53365, CVE-2025-53366, CVE-2025-66416
@@ -104,6 +108,15 @@ dependencies = [
     "aiofiles>=24.1.0",
     "fastapi-cache2>=0.2.1",
     "redis>=5.0",
+    "cachetools>=5.3.0",  # In-memory LRU cache for multi-tier caching
+
+    # gRPC — High-performance inter-service communication
+    "grpcio>=1.60.0",
+    "grpcio-tools>=1.60.0",  # Proto compiler (grpc_tools.protoc)
+    "protobuf>=4.25.0",
+
+    # Kafka — Real-time event streaming and analytics
+    "confluent-kafka>=2.3.0",
 
     # ML/AI - Critical for Round Table and RAG
     "numpy>=2.1.3",
