--- a/skyyrose/package.json
+++ b/skyyrose/package.json
@@ -58,6 +58,16 @@
     "three": "^0.182.0",
     "zod": "^4.3.6"
   },
+  "overrides": {
+    "esbuild": ">=0.25.0",
+    "ajv": ">=8.18.0",
+    "minimatch": ">=10.2.1",
+    "glob": ">=10.4.0",
+    "rimraf": ">=5.0.10",
+    "hono": "$hono",
+    "nanotar": ">=0.2.1",
+    "devalue": ">=5.6.3"
+  },
   "pnpm": {
     "overrides": {
       "esbuild": ">=0.25.0",
